[scheduling] UI update to improve accessbility of action buttons on agenda, fixing horizontal overflow while editing agenda.

--- a/bungeni.main/trunk/bungeni/ui/resources/calendar/schedule-editor.css
+++ b/bungeni.main/trunk/bungeni/ui/resources/calendar/schedule-editor.css
@@ -26,6 +26,12 @@
 .list-minutes.yui-dt-liner {
     width:96% !important;
 }
+.yui-layout-bd.layout-custom-wrapper {
+    text-align:right !important;
+}
+.yui-skin-sam .yui-dt-bd {
+    overflow-x:hidden;
+}
 
 .schedule-available-item-filters button em {
     font-style: normal;
